Every listed features except the difference between general page and advanced page(the warning window and wildcard). An extra feature that whenever user delete device from device page, any rule has this device as src_vlan or dst_vlan will also be deleted

--- a/luci-app-dreamcatcher/luasrc/view/admin_security/password.htm
+++ b/luci-app-dreamcatcher/luasrc/view/admin_security/password.htm
@@ -1,7 +1,8 @@
 <%+header%>
 
-<h1><a id="title1" name="title1"><%:Please input the device name%></a></h1>
-
+<h1><a id="title1" name="title1"><%:Add New Devices%></a></h1>
+For security, please add each device individually to the network. Each device will get its own password (the username is the device name you choose). Do not share these passwords with anyone or between devices. If you need to let a friend use your network, simply add their device here. If you replace a device, simply delete your old device from the list below and create a new one.
+<br><br>
 <form id="form" action="process" method="post">
 	Device name: <input type="text" name="device_name" id="dname"></input>
 	<input type="button" onclick="Reaction()" value="Submit"></input>
