--- a/luci-app-dreamcatcher/luasrc/view/admin_security/rules.htm
+++ b/luci-app-dreamcatcher/luasrc/view/admin_security/rules.htm
@@ -2,15 +2,15 @@
 
 <h1><a id="title1" name="title1"><%:Rules Page%></a></h1>
 <div> This page shows the rules for dreamcatcher.</div>
-<h2><a id="title2" name="title2"><%:Permanent Rules%></a></h2>     
-<br>
-<pre>
-<%=permanent%>
-</pre>
-<h2><a id="title2" name="title2"><%:Temp Rules%></a></h2>
+<h2><a id="title2" name="title2"><%:Pending Rules%></a></h2>     
 <br>
 <pre>
 <%=temp%>
+</pre>
+<h2><a id="title2" name="title2"><%:Approved Rules%></a></h2>
+<br>
+<pre>
+<%=permanent%>
 </pre>
 <h2><a id="title3" name="title3"><%:Add new rules%></a></h2>
 <form style="margin:0px" id="add" action="" method="post">
