switch port working progress

--- a/luci-app-dreamcatcher/luasrc/view/admin_security/password.htm
+++ b/luci-app-dreamcatcher/luasrc/view/admin_security/password.htm
@@ -14,6 +14,8 @@ For security, please add each device individually to the network. Each device wi
 
 <pre><%=table_text%></pre>
 
+<pre><%=physports%></pre>
+
 <script>
 function Reaction(){
 	document.getElementById("form").submit();
