--- a/luci-app-dreamcatcher/luasrc/view/admin_security/rules_2.htm
+++ b/luci-app-dreamcatcher/luasrc/view/admin_security/rules_2.htm
@@ -20,7 +20,7 @@
                 <td>Destination vlan</td>                                                                                            
                 <td>Protocol</td>                                                                                                    
                 <td>Source IP</td>                                                                                                   
-        	<td>Title</td>
+        	<td>Type</td>
 		<td></td>
 	</tr>
 	<tr>
@@ -28,7 +28,7 @@
                 <td><input style="width:120px" type="text" name="dst_vlan" id="dst_vlan"></input></td>                        
                 <td><input style="width:120px" type="text" name="proto" id="proto"></input></td>                                   
                 <td><input style="width:120px" type="text" name="src_ip" id="src_ip"></input></td> 
-	        <td><input style="width:120px" type="text" name="title" id="title"></input></td>        
+	        <td><input style="width:120px" type="text" name="type" id="type"></input></td>        
 	        <td><input type="button" onclick="add_perm_rule()" value="Add to perm rule"></td>                                                
 	</tr>
 	<tr>
