Frontend updated for dpi_rule

--- a/luci-app-dreamcatcher/luasrc/view/admin_security/rules_1.htm
+++ b/luci-app-dreamcatcher/luasrc/view/admin_security/rules_1.htm
@@ -20,7 +20,6 @@
                 <td>Destination vlan</td>                                                                                            
                 <td>Protocol</td>                                                                                                    
                 <td>Source IP</td>                                                                                                   
-        	<td>Type</td>
 		<td></td>
 	</tr>
 	<tr>
@@ -28,7 +27,6 @@
                 <td><input style="width:120px" type="text" name="dst_vlan" id="dst_vlan"></input></td>                        
                 <td><input style="width:120px" type="text" name="proto" id="proto"></input></td>                                   
                 <td><input style="width:120px" type="text" name="src_ip" id="src_ip"></input></td> 
-	        <td><input style="width:120px" type="text" name="type" id="type"></input></td>        
 	        <td><input type="button" onclick="add_perm_rule()" value="Add to perm rule"></td>                                                
 	</tr>
 	<tr>
@@ -37,14 +35,12 @@
                 <td>Destination port</td>                                                                                            
                 <td>Verdict</td>                                                                                                     
 		<td></td>
-		<td></td>
 	</tr>
 	<tr>
                 <td><input style="width:120px" type="text" name="dst_ip" id="dst_ip"></input></td>    
                 <td><input style="width:120px" type="text" name="src_port" id="src_port"></input></td>     
                 <td><input style="width:120px" type="text" name="dst_port" id="dst_port"></input></td>
                 <td><input style="width:120px" type="text" name="verdict" id="verdict"></input></td>          
-		<td></td>
 		<td><input type="button" onclick="add_temp_rule()" value="Add to temp rule"></td>
 	</tr>
 	</table>
@@ -70,6 +66,10 @@ function modify_rule(IcName,method){
 	}else{
 		document.getElementById(IcName.concat(method)).submit();
 	}
+}
+
+function modify_rule_2(IcName,method){
+	document.getElementById(IcName.concat(method)).submit();
 }
 </script>
 <%+footer%>
